src/objects/Welcome_Call_Checklist__c.object
<CustomObject>
    <fields>
        <fullName>Bank_Loan_Status__c</fullName>
        <label>Bank Loan Status</label>
        <picklist>
            <controllingField>Funding__c</controllingField>
            <picklistValues>
                <fullName>Sanctioned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Need help to apply</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Call_Disposition__c</fullName>
        <label>Call Disposition</label>
        <picklist>
            <picklistValues>
                <fullName>Welcome call accepted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Welcome call rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wrong Number/ No Number</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ringing/Switched Off/Not Reachable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Call Back requested</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Delivery_of_Invoices_and_receipts__c</fullName>
        <label>Delivery of Invoices and receipts</label>
        <picklist>
            <picklistValues>
                <fullName>Soft Copy via Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Soft copy via email and hardcopy</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Detail__c</fullName>
        <label>Detail</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Document_Type__c</fullName>
        <label>Document Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Funding__c</fullName>
        <label>Funding</label>
        <picklist>
            <picklistValues>
                <fullName>Self Funded</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bank Loan</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Remarks__c</fullName>
        <label>Remarks</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Verify__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Verify</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Welcome_Call_Header__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Welcome Call Header</label>
        <referenceTo>Welcome_Call_Header__c</referenceTo>
        <relationshipLabel>WelcomeCallChecklist</relationshipLabel>
        <relationshipName>WelcomeCallChecklist</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Welcome Call Checklist</label>
    <nameField>
        <label>Welcome Call Checklist Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>WelcomeCallChecklist</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>